# parakit

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  requirements-convert.txt
build_support/: blas_paths.rs  windows_openblas.rs
docs/: README.md  architecture.md  build.md  cleaning-rules.md  dev.md  linux-desktop.md  macos-desktop.md  quality.md  running.md  troubleshooting.md
examples/: transcribe-file.rs  transcribe_file.rs
scripts/: README.md  install-windows.ps1  requirements-convert.txt  transcribe_nemo_parakeet.py  windows-cpu-build.bat  windows-cpu-build.ps1
scripts/macos/: install.sh
scripts/windows/: README.md  build-bundle.bat  build-bundle.ps1  build.bat  build.ps1  common.ps1  install-bundle.ps1  install.ps1  run-windows-build.bat  windows-cpu-build.bat  windows-cpu-build.ps1  windows-cuda-build.bat  windows-vulkan-build.bat
src/: app.rs  audio.rs  audio_file.rs  build_info.rs  checksum.rs  cli.rs  constants.rs  crispasr_ext.rs  data_log.rs  fetch.rs  ffi_util.rs  gguf.rs  gpu.rs  inference.rs  inject.rs  lib.rs  main.rs  model.rs  rules.rs  sounds.rs  test_support.rs  warmup.rs
src/daemon/: alsa.rs  audio.rs  audio_manager.rs  audio_manager_tests.rs  audio_pactl.rs  hotkey.rs  hotkey_help.rs  hotkey_tests.rs  inject.rs  inject_smoke.rs  inject_tests.rs  ipc.rs  logging.rs  macos.rs  mod.rs  notifications.rs  preflight.rs  recording.rs  session.rs  sounds.rs  stderr.rs  target.rs  windows_focus.rs  windows_input.rs  windows_paste_smoke.rs  windows_security.rs  worker.rs  wsl.rs  x11.rs
src/daemon/audio/: alsa_silence.c  capture.rs  capture_tests.rs  mod.rs
src/daemon/desktop/: clipboard_restore.rs  hotkey.rs  hotkey_tests.rs  inject.rs  inject_tests.rs  mod.rs  windows_clipboard_history.rs  windows_input.rs  windows_paste_smoke.rs  wsl.rs  x11.rs
src/daemon/desktop/hotkey/: macos.rs
tests/: blas_path_overrides.rs  windows_bundle_guard.rs  windows_cuda_layout.rs  windows_manifest.rs  windows_openblas_layout.rs
tests/common/: mod.rs
tools/: transcribe-file.rs
