[package]
name = "parakit"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Push-to-talk desktop dictation daemon backed by NVIDIA Parakeet through CrispASR."
license = "MIT"
readme = "README.md"
repository = "https://github.com/pszemraj/parakit.git"
keywords = ["asr", "dictation", "parakeet", "speech-to-text"]
categories = ["command-line-utilities", "multimedia::audio"]
publish = false
default-run = "parakit"

[[bin]]
name = "parakit"
path = "src/main.rs"
required-features = ["daemon"]

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }
directories = "6"
anstream = "1.0"
anstyle = "1.0"

# Inference runtime. CrispASR's Rust crates are supplied by the pinned
# submodule rather than crates.io.
crispasr = { path = "vendor/CrispASR/crispasr", default-features = false }

# Audio capture
cpal = { version = "0.15", optional = true }
rubato = "0.15"        # high-quality resampler (sinc, asynchronous)

# Lock-free or mutex-protected shared state
parking_lot = "0.12"

# Low-level push-to-talk hotkey fallback. On Linux this reads evdev devices,
# so it needs explicit /dev/input access. The X11 desktop backend below is
# preferred when available.
rdev = { version = "0.5", features = ["unstable_grab"], optional = true }

# Text insertion at cursor. Batch mode uses clipboard paste; streaming keeps
# synthetic typing for partial chunks.
arboard = { version = "3.4", default-features = false, optional = true }
enigo = { version = "0.2", optional = true }

# Audio cues (start/stop/error tones, generated programmatically)
rodio = { version = "0.19", default-features = false, features = ["wav"], optional = true }

# Text cleaning rules
regex = "1.10"
once_cell = "1.19"

# Transcription logging
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Downloading and checksums for `parakit fetch`
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"

# Error handling
anyhow = "1.0"
libc = "0.2"

# Threading conveniences
crossbeam-channel = "0.5"

# WAV decoding for the file-transcription debugging example
hound = "3.5"

[target.'cfg(target_os = "linux")'.dependencies]
# Direct X11 desktop hotkey registration. This avoids evdev permissions on
# ordinary Xorg sessions and gives us explicit connection/grab errors.
x11rb = { version = "0.13", features = ["xtest"], optional = true }

[features]
default = ["bundled", "daemon"]

# Live push-to-talk daemon dependencies. Keeping this as a feature lets the
# WAV-only transcribe-file example build on machines missing desktop/audio dev
# packages while preserving default daemon behavior.
daemon = [
  "dep:arboard",
  "dep:cpal",
  "dep:enigo",
  "dep:rdev",
  "dep:rodio",
  "dep:x11rb",
]

# Build libcrispasr from `vendor/CrispASR` via cmake. On by default.
# Disable with `--no-default-features --features daemon` to build the daemon
# against an existing libcrispasr installation. Set CRISPASR_LIB_DIR if the
# library is not in the platform linker search path.
bundled = []

# GPU backends. Each implies `bundled` because crispasr-sys does NOT
# rebuild the C library — the choice of backend has to happen at the
# CrispASR cmake level, which only matters when we're the ones building it.
cuda    = ["bundled", "crispasr/cuda"]
metal   = ["bundled", "crispasr/metal"]
vulkan  = ["bundled", "crispasr/vulkan"]

[build-dependencies]
cmake = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
