[package]
name = "parakit"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Push-to-talk desktop dictation daemon backed by NVIDIA Parakeet through CrispASR."
license = "MIT"
readme = "README.md"
repository = "https://github.com/pszemraj/parakit.git"
keywords = ["asr", "dictation", "parakeet", "speech-to-text"]
categories = ["command-line-utilities", "multimedia::audio"]
publish = false
default-run = "parakit"

[[bin]]
name = "parakit"
path = "src/main.rs"
required-features = ["daemon"]

[[example]]
name = "transcribe-file"
path = "tools/transcribe-file.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }
directories = "6"
anstream = "1.0"
anstyle = "1.0"

# Inference runtime. CrispASR's Rust crates are supplied by the pinned
# submodule rather than crates.io.
crispasr = { path = "vendor/CrispASR/crispasr", default-features = false }

# Audio capture
cpal = { version = "0.15", optional = true }
rubato = "0.15"        # high-quality resampler (sinc, asynchronous)
hound = "3.5"          # WAV decoding for quality tools and daemon validation runs

# Lock-free or mutex-protected shared state
parking_lot = "0.12"
ringbuf = "0.4"

# Per-user daemon singleton lock
fs2 = "0.4"

# Passive key listening for the Linux x11-listen backend and legacy non-Linux
# desktop hotkey hooks.
rdev = { version = "0.5", features = ["unstable_grab"], optional = true }

# Text insertion at cursor. Batch mode uses clipboard paste; direct mode uses
# synthetic typing.
arboard = { version = "3.4", default-features = false, features = ["image-data"], optional = true }
enigo = { version = "0.2", optional = true }

# Audio cues (start/stop/error tones, generated programmatically)
rodio = { version = "0.19", default-features = false, features = ["wav"], optional = true }

# Text cleaning rules
regex = "1.10"

# Transcription logging
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Downloading and checksums for `parakit fetch`
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"

# Error handling
anyhow = "1.0"
libc = "0.2"

# Threading conveniences
crossbeam-channel = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux default hotkey capture registers Ctrl+Space with the X11 desktop.
global-hotkey = { version = "0.8", optional = true }

# Desktop notifications for safe copy-only fallbacks and microphone recovery.
notify-rust = { version = "4", optional = true }

# Experimental Linux evdev/uinput keyboard proxy backend.
epoll = { version = "4.4", optional = true }
evdev-rs = { version = "0.4", optional = true }

# X11 paste and smoke-test utilities.
x11rb = { version = "0.13", features = ["xtest"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["bundled", "daemon"]

# Live push-to-talk daemon dependencies. Keeping this as a feature lets the
# WAV-only transcribe-file quality target build on machines missing
# desktop/audio dev packages while preserving default daemon behavior.
daemon = [
  "dep:arboard",
  "dep:cpal",
  "dep:enigo",
  "dep:epoll",
  "dep:evdev-rs",
  "dep:global-hotkey",
  "dep:notify-rust",
  "dep:rdev",
  "dep:rodio",
  "dep:x11rb",
]

# Build libcrispasr from `vendor/CrispASR` via cmake. On by default.
# Disable with `--no-default-features --features daemon` to build the daemon
# against an existing libcrispasr installation. Set CRISPASR_LIB_DIR if the
# library is not in the platform linker search path.
bundled = []

# GPU backends. Each implies `bundled` because crispasr-sys does NOT
# rebuild the C library — the choice of backend has to happen at the
# CrispASR cmake level, which only matters when we're the ones building it.
cuda    = ["bundled", "crispasr/cuda"]
metal   = ["bundled", "crispasr/metal"]
vulkan  = ["bundled", "crispasr/vulkan"]

[build-dependencies]
cc = "1"
cmake = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
